--- a/website/newsletter/conferences/react-summit-us-2024/index.mdx
+++ b/website/newsletter/conferences/react-summit-us-2024/index.mdx
@@ -136,8 +136,8 @@ That's a wrap!
 
 Before you leave, make sure to:
 
-- check the [React Summit 2025](https://reactsummit.com?utm_source=Newsletter&utm_medium=thisweekinreact) early bird tickets
-- hire [FocusReactive](https://focusreactive.com/?utm_source=Newsletter&utm_medium=thisweekinreact) for their Next.js CMS and e-Commerce expertise
-- give us feedback - Did you like this email? Hit reply and tell us!
+- Check the [React Summit 2025](https://reactsummit.com?utm_source=Newsletter&utm_medium=thisweekinreact) early bird tickets
+- Hire [FocusReactive](https://focusreactive.com/?utm_source=Newsletter&utm_medium=thisweekinreact) for their Next.js CMS and e-Commerce expertise
+- Give us feedback - Did you like this email? Hit reply and tell us!
 
 See ya! 👋
