--- a/website/newsletter/211/index.mdx
+++ b/website/newsletter/211/index.mdx
@@ -34,14 +34,10 @@ import Support from "../_support.mdx";
 
 AG Charts is a canvas-based charting library from AG Grid. Initially built to power [AG Grids](https://www.ag-grid.com/react-table?utm_source=thisweekinreact&utm_medium=newsletter&utm_campaign=2024-email-4) Integrated Charts, AG Charts now has over **1 million** npm downloads/month:
 
-*   🆓 **Free:** Access a range of chart types, including **bar**, **line**, **scatter**, **area**, and more – completely **free**, forever.
-    
-*   🚀 **Fast:** Using **batch drawing** and advanced change detection alongside the **offscreen canvas API**, AG Charts can easily render hundreds of thousands of data points out of the box
-    
-*   📊 **Financial Charts:** Build interactive financial charts featuring advanced annotations with just 3 lines of code.
-    
-*   🏢 **Enterprise Features:** Upgrade to Enterprise to unlock advanced capabilities such as animations, context menus, crosshairs and more. Try it for free, no trial license required.
-    
+- 🆓 **Free:** Access a range of chart types, including **bar**, **line**, **scatter**, **area**, and more – completely **free**, forever.
+- 🚀 **Fast:** Using **batch drawing** and advanced change detection alongside the **offscreen canvas API**, AG Charts can easily render hundreds of thousands of data points out of the box
+- 📊 **Financial Charts:** Build interactive financial charts featuring advanced annotations with just 3 lines of code.
+- 🏢 **Enterprise Features:** Upgrade to Enterprise to unlock advanced capabilities such as animations, context menus, crosshairs and more. Try it for free, no trial license required.
 
 Learn More: [www.ag-grid.com/charts](https://www.ag-grid.com/charts?utm_source=thisweekinreact&utm_medium=newsletter&utm_campaign=2024-email-4)
 
@@ -65,14 +61,10 @@ Learn More: [www.ag-grid.com/charts](https://www.ag-grid.com/charts?utm_source=t
 
 Attention React enthusiasts: PSPDFKit is now **Nutrient**! 👋 We may have a new name, but our Web SDK is the same best in class choice you've come to rely on for viewing, annotating, and editing PDFs and other document types.
 
-*   🏎️ Get started quickly with a free trial and extensive documentation
-    
-*   ⏱️ Save time developing by leveraging the slick built-in UI and **Baseline-UI**, our new design system
-    
-*   🛠️ Leverage extensive APIs for processing and customization
-    
-*   🆘 Make use of our support and solution engineering team to get help from domain experts
-    
+- 🏎️ Get started quickly with a free trial and extensive documentation
+- ⏱️ Save time developing by leveraging the slick built-in UI and **Baseline-UI**, our new design system
+- 🛠️ Leverage extensive APIs for processing and customization
+- 🆘 Make use of our support and solution engineering team to get help from domain experts
 
 We've got you covered on **all platforms** from mobile to backend.
 
@@ -84,7 +76,7 @@ Want to work on challenging problems and have **impact on hundreds of applicatio
 
 <Todo />
 
-- 💸 [Sonny Sangha - Build a Zoom 2.0 Clone with React Native](https://go.clerk.com/jBpMIuk)
+- 💸 [Implementing Authentication and Authorization with Clerk and Expo](https://go.clerk.com/HueGwuo)
 
 ---
 
