--- a/website/newsletter/211/index.mdx
+++ b/website/newsletter/211/index.mdx
@@ -1,16 +1,17 @@
 ---
 slug: /211
-title: "This Week In React #211: React Router, TanStack, Next.js, Vite, RSCs, Aria, Rslib, React-Scan, Screens, Edge-to-Edge, RN 0.77 RC, Legend List, Rapier, Testing Library, Cali, Nitro, Solito"
+title: "This Week In React #211: React Router, TanStack, Next.js, Vite, RSCs, Aria, Rslib, React-Scan, Screens, Edge-to-Edge, RN 0.77 RC, Legend List, Rapier, Testing Library, Bottom Tabs, Cali, Nitro, Solito, Radon, Wasm, Tailwind, TypeScript, Deno..."
 authors: [slorber]
 date: 11-27-2024
-unlisted: true
 ---
 
 Hi everyone!
 
-<Todo />
+It's another great week for React with exciting releases, notably React Router 7 and Vite 6. TanStack nearly steals the show!
 
-We'd be super grateful if you'd share this newsletter or support us here :
+The React Native ecosystem is not left behind with 0.77 in RC, Legend List, Screens... and a quite exciting Wasm-based innovation.
+
+🙏 As always, please support the newsletter on your favorite platform:
 
 - [X / Twitter](https://slo.im/last/x)
 - [Bluesky](https://slo.im/last/b)
@@ -121,7 +122,7 @@ The library used by React Navigation and Expo Router was released a few weeks ag
 - 📜 [Upgrading to Expo SDK 52](https://expo.dev/blog/upgrading-to-expo-sdk-52)
 - 📜 [Environment variables in EAS: new changes to simplify setup](https://expo.dev/blog/environment-variables)
 - 🧑‍🎓 [React Native Mastery](https://www.notjust.dev/react-native-mastery): Vadim just launched his new project-based React Native course (paid).
-- 📦 [React Native 0.77.0-rc.0](https://github.com/facebook/react-native/releases/tag/v0.77.0-rc.0): The init template uses Swift instead of Objective-C. Improved CSS support (display contents, mixBlendMode). There’s ongoing work to clarify the native public API surface.
+- 📦 [React Native 0.77.0-rc.0](https://github.com/facebook/react-native/releases/tag/v0.77.0-rc.0): The init template uses Swift instead of Objective-C. Improved CSS support (display contents, mixBlendMode). Ongoing work to clarify the native public API surface.
 - 📦 [Legend List \- Faster drop-in replacement for FlatList](https://github.com/LegendApp/legend-list): A new signal-based list library is trending with great community feedback. Apparently, it’s also faster than FlashList.
 - 📦 [React Native Rapier](https://github.com/callstack/react-native-rapier): You may not need this Rust-based physics engine, but there’s an even more important story behind all this. It’s a playground for Callstack devs to compile back WASM code to native ([demo](https://x.com/rob_pasinski/status/1861077912713318781)), enabling efficient cross-platform usage of native languages like Rust.
 - 📦 [LiveStore \- SQLite-based data layer for local-first apps](https://expo.dev/blog/local-first-application-development-with-livestore): Upcoming event-sourcing-based local-first lib with first-class Expo integration.
