--- a/website/newsletter/conferences/react-summit-us-2024/index.mdx
+++ b/website/newsletter/conferences/react-summit-us-2024/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /conferences/2024/react-summit-us-recap
-title: "React Summit US 2024 - Conf Recap"
+title: "📅 React Summit US 2024 - Conf Recap"
 authors:
   - name: "Anton Meleshkin"
     url: https://www.linkedin.com/in/anton-meleshkin-b226b5184/
