--- a/website/newsletter/211/index.mdx
+++ b/website/newsletter/211/index.mdx
@@ -110,7 +110,7 @@ Want to work on challenging problems and have **impact on hundreds of applicatio
 The library used by React Navigation and Expo Router was released a few weeks ago, and the promised release blog post is finally online, presenting the highlights visually through various videos:
 
 - Sheets API: Android `formSheet` and iOS custom detents
-- Screen pre-loading for native stack to improve perceived performance
+- Screen pre-loading for the native stack to improve perceived performance
 - Improved iOS animations
 
 ---
