--- a/website/newsletter/_support.mdx
+++ b/website/newsletter/_support.mdx
@@ -1,7 +1,8 @@
-**To support me:**
+As always, we appreciate your support on your favorite platform:
 
-- 😘 **Recommend the newsletter to your friends**: it really helps!
-- 💸 [**Sponsor the newsletter**](https://thisweekinreact.com/sponsor)
-- 🧵 [**Retweet the latest Twitter thread**](https://slo.im/thread)
+- 🦋 [Bluesky](https://slo.im/last/b)
+- 🐦 [X / Twitter](https://slo.im/last/x)
+- 👔 [LinkedIn](https://slo.im/last/l)
+- 👽 [Reddit]()
 
 <SubscribeFormEmbed placement="top" />
