--- a/website/newsletter/_support.mdx
+++ b/website/newsletter/_support.mdx
@@ -1,4 +1,4 @@
-As always, we appreciate your support on your favorite platform:
+As always, thanks for supporting us on your favorite platform:
 
 - 🦋 [Bluesky](https://slo.im/last/b)
 - 🐦 [X / Twitter](https://slo.im/last/x)
